--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <uses-sdk android:minSdkVersion="8"
             android:targetSdkVersion="16" />
 
-  <application android:icon="@drawable/icon" android:label="@string/app_name">
+  <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
     <activity android:name=".HelloAndroidActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
