--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="net.sareweb.android.txotx" android:versionCode="1" android:versionName="0.0.1-SNAPSHOT">
+    package="net.sareweb.android.txotx"
+    android:installLocation="preferExternal"
+    android:versionCode="1"
+    android:versionName="0.0.1-SNAPSHOT" >
 
-  <uses-sdk android:minSdkVersion="8"
-            android:targetSdkVersion="16" />
+    <permission
+        android:name="net.sareweb.android.barazkide.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
-  <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-    <activity android:name=".HelloAndroidActivity">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
-  </application>
+    <uses-permission android:name="net.sareweb.android.barazkide.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="16" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name"
+        android:theme="@style/Theme.Sherlock.Light" >
+        <activity android:name=".activity.LogInActivity_" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activity.SagardotegiakActivity_" />
+    </application>
 
 </manifest>
-
