--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,4 @@
 # Project target.
 target=android-16
 android.library.reference.1=../abs/abs420/library
+android.library.reference.2=../google-play-services_lib
