--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,13 +36,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SagardotegiakActivity_" />
-        <activity android:name=".activity.SagardotegiDetailActivity_" />
+        <activity
+            android:name=".activity.SagardotegiakActivity_"/>
+        <activity
+            android:name=".activity.SagardotegiDetailActivity_"/>
         <activity android:name=".activity.DashboardActivity_" />
         <activity android:name=".activity.AboutActivity_" />
+
         <meta-data
-			android:name="com.google.android.maps.v2.API_KEY"
-			android:value="AIzaSyB_DIIBvjbsncei9CcP3uUBd1AxFwmL4WQ"/>
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyB_DIIBvjbsncei9CcP3uUBd1AxFwmL4WQ" />
     </application>
 
 </manifest>
