--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,10 +36,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.SagardotegiakActivity_"/>
-        <activity
-            android:name=".activity.SagardotegiDetailActivity_"/>
+        <activity android:name=".activity.SagardotegiakActivity_" />
+        <activity android:name=".activity.SagardotegiMapActivity_" />
+        <activity android:name=".activity.SagardotegiDetailActivity_" />
         <activity android:name=".activity.DashboardActivity_" />
         <activity android:name=".activity.AboutActivity_" />
 
