--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".activity.SagardotegiDetailActivity_" />
         <activity android:name=".activity.DashboardActivity_" />
         <activity android:name=".activity.AboutActivity_" />
+        <activity android:name=".activity.NoConnActivity_" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
