--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
         <activity android:name=".activity.SagardotegiakActivity_" />
         <activity android:name=".activity.SagardotegiMapActivity_" />
-        <activity android:name=".activity.SagardotegiDetailActivity_" />
+        <activity android:name=".activity.SagardotegiDetailActivity_" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".activity.DashboardActivity_" />
         <activity android:name=".activity.AboutActivity_" />
         <activity android:name=".activity.NoConnActivity_" />
