--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.sareweb.android.txotx"
     android:installLocation="preferExternal"
-    android:versionCode="1"
-    android:versionName="0.0.1-SNAPSHOT" >
+    android:versionCode="3"
+    android:versionName="v0.3" >
 
     <permission
         android:name="net.sareweb.android.barazkide.permission.MAPS_RECEIVE"
