--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.sareweb.android.txotx"
     android:installLocation="preferExternal"
-    android:versionCode="3"
-    android:versionName="v0.3" >
+    android:versionCode="4"
+    android:versionName="v0.4" >
 
     <permission
         android:name="net.sareweb.android.barazkide.permission.MAPS_RECEIVE"
@@ -37,14 +37,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SagardotegiakActivity_" />
-        <activity android:name=".activity.SagardotegiMapActivity_" />
+        <activity android:name=".activity.SagardotegiMapActivity_" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".activity.SagardotegiDetailActivity_" android:configChanges="keyboardHidden|orientation|screenSize"/>
         <activity android:name=".activity.DashboardActivity_" />
+        <activity android:name=".activity.SailkapenaActivity_" />
         <activity android:name=".activity.SettingsActivity_" />
         <activity android:name=".activity.AboutActivity_" />
         <activity android:name=".activity.NoConnActivity_" />
 
-        <!-- Debug
+        <!-- Debug 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyB_DIIBvjbsncei9CcP3uUBd1AxFwmL4WQ" /> -->
