--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.Sherlock.Light" >
-        <activity android:name=".activity.LogInActivity_" >
+        <activity android:name=".activity.LoadingActivity_" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
