Protraitaren eguneraketarekin aurrera

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,6 +51,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.TxotxActivity_" />
+        <activity android:name=".activity.SettingsActivity_" />
         <activity android:name=".activity.NoConnActivity_" />
 		<activity
             android:name=".activity.SagardotegiDetailActivity_"
